--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SoniSSk.githun.io/todoStatus",
+  "homepage": "http://SoniSSk.github.io/todoStatus",
   "name": "todo_status",
   "version": "0.1.0",
   "private": true,
